--- a/otimizador/index.html
+++ b/otimizador/index.html
@@ -40,9 +40,15 @@
             align-items: center;
         }
 
-        .miner-item {
-            width: 50px;
-            height: 50px;
+        .miner-item-1cell {
+            width: 60px;
+            height: auto;
+            object-fit: contain;
+        }
+
+        .miner-item-2cells {
+            width: 120px;
+            height: auto;
             object-fit: contain;
         }
 
@@ -75,19 +81,19 @@
     <div class="miners-block-wrapper">
         <!-- Mineradores com posição absoluta -->
         <div class="miner-img-wrapper">
-            <img class="miner-item" src="https://static.rollercoin.com/static/img/market/miners/rolleradmingauntlet.gif?v=1.2.1" alt="Miner 1">
+            <img class="miner-item-2cells" src="https://static.rollercoin.com/static/img/market/miners/rolleradmingauntlet.gif?v=1.2.1" alt="Miner 1">
         </div>
         <div class="miner-img-wrapper">
-            <img class="miner-item" src="https://static.rollercoin.com/static/img/market/miners/roller_alttoken.gif?v=1.2.1" alt="Miner 2">
+            <img class="miner-item-1cell" src="https://static.rollercoin.com/static/img/market/miners/roller_alttoken.gif?v=1.2.1" alt="Miner 2">
         </div>
         <div class="miner-img-wrapper">
-            <img class="miner-item" src="https://static.rollercoin.com/static/img/market/miners/roller_alttoken.gif?v=1.2.1" alt="Miner 3">
+            <img class="miner-item-1cell" src="https://static.rollercoin.com/static/img/market/miners/roller_alttoken.gif?v=1.2.1" alt="Miner 3">
         </div>
         <div class="miner-img-wrapper">
-            <img class="miner-item" src="https://static.rollercoin.com/static/img/market/miners/totally_black.gif?v=1.2.1" alt="Miner 4">
+            <img class="miner-item-2cells" src="https://static.rollercoin.com/static/img/market/miners/totally_black.gif?v=1.2.1" alt="Miner 4">
         </div>
         <div class="miner-img-wrapper">
-            <img class="miner-item" src="https://static.rollercoin.com/static/img/market/miners/hamnapping.gif?v=1.2.1" alt="Miner 5">
+            <img class="miner-item-2cells" src="https://static.rollercoin.com/static/img/market/miners/hamnapping.gif?v=1.2.1" alt="Miner 5">
         </div>
     </div>
     
