--- a/otimizador/index.html
+++ b/otimizador/index.html
@@ -41,13 +41,15 @@
         }
 
         .miner-item-1cell {
-            width: 100px;
+            /*width: 100px;*/
+            width: 50px;
             height: auto;
             object-fit: contain;
         }
 
         .miner-item-2cells {
-            width: 100px;
+            /*width: 100px;*/
+            width: 50px;
             height: auto;
             object-fit: contain;
         }
