--- a/ranking/index.html
+++ b/ranking/index.html
@@ -40,7 +40,7 @@
             <div id="progress-bar" class="progress-bar">0%</div>
         </div>
 
-        <div class="ranking">
+        <div class="ranking2">
     <table id="rankingRato">
         <tbody>
             <tr>
